--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 dependencies:
   flutter_web: any
   flutter_web_ui: any
-
+  rca
 dev_dependencies:
   build_runner: ^1.4.0
   build_web_compilers: ^2.0.0
